--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/kursovawork?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.hikari.maximum-pool-size=2
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.url=jdbc:mysql://localhost:3306/kursovawork?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.hikari.maximum-pool-size=2
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#
+#spring.jpa.hibernate.ddl-auto = update
+apring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/denys
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
