--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #
 #spring.jpa.hibernate.ddl-auto = update
-apring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/denys
 spring.datasource.username=postgres
 spring.datasource.password=postgres
